# ms24-sum25-agentic-ai-project

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/kamaz_energo/benchmark/: gemini-2.5-flash_results.csv  gemini-2.5-pro_results.csv  mistral-large-latest_results.csv
data/kamaz_energo/docx/: 001.docx  002.docx  003.docx  004.docx  005.docx
data/kamaz_energo/html/: 001.html  002.html  003.html  004.html  005.html
data/kamaz_energo/items/: 003.json  004.json
data/kamaz_energo/items/gemini-2.5-flash/: 003.json
data/kamaz_energo/items/gemini-2.5-pro/: 001.json  002.json  003.json  004.json  005.json
data/kamaz_energo/items/mistral-large-latest/: 001.json  002.json  003.json  004.json  005.json
data/kamaz_energo/md/: 004.md
data/kamaz_energo/md/gemini-2.5-flash/: 003.md
data/kamaz_energo/md/gemini-2.5-pro/: 001.md  002.md  003.md  004.md  005.md
data/kamaz_energo/md/mistral-large-latest/: 001.md  002.md  003.md  004.md  005.md
data/kamaz_energo/test/: wrong_content.docx  wrong_extension.doc
data/kamaz_energo/test/items/: 001.json  002.json  005.json
data/kamaz_energo/test/md/: 001.md  002.md  003.md  005.md
scripts/: docx_to_html.py
src/app/: benchmark.py  callbacks.py  generator.py  graph.py  llm.py  main.py  schemas.py  settings.py
src/app/graph/: swarm.py  workflow.py
